<resources>
	<string name="app_name">aMusic</string>
	<string name="screen_top_play_control_playing">Playing</string>
	<string name="screen_home_tab_audio">Music</string>
	<string name="screen_home_tab_record">Record</string>
	<string name="screen_home_tab_search">Library</string>
	<string name="screen_home_tab_kmedia">Sing</string>
	<string name="screen_audio_item_playlists_name">Playlist</string>
	<string name="screen_audio_item_songs_name">Song</string>
	<string name="screen_audio_item_singers_name">Artist</string>
	<string name="screen_audio_item_albums_name">Album</string>
	<string name="screen_audio_item_favorites_name">Favourite</string>
	<string name="screen_audio_item_recently_songs_name">Recently</string>
	<string name="screen_search_category_item_child_name">Child</string>
	<string name="screen_search_category_item_love_name">Love</string>
	<string name="screen_search_category_item_europe_name">Western</string>
	<string name="screen_search_category_item_jask_name">Japan&amp;Korea</string>
	<string name="screen_search_category_item_classic_name">Classic</string>
	<string name="screen_search_category_item_television_name">Movie</string>
	<string name="screen_search_category_item_hkat_name">HK&amp;TW</string>
	<string name="screen_search_category_item_china_name">China</string>
	<string name="screen_search_baidu_content">Baidu Search</string>
	<string name="screen_search_easou_content">Easou Search</string>
	<string name="screen_search_filter">Input letters of song or artist</string>
	<string name="screen_search_song_filter">Input letters of song</string>
	<string name="screen_search_singer_filter">Input letters of artist</string>
	<string name="screen_audio_item_sect_unknow">Unknown</string>
	<string name="screen_audio_playlist_create">Create playlist</string>
	<string name="screen_audio_playlist_create_name">Playlist name:</string>
	<string name="screen_audio_playlist_create_ok">OK</string>
	<string name="screen_audio_playlist_create_cancel">Cancel</string>
	<string name="screen_audio_playlist_create_title">New playlist</string>
	<string name="screen_audio_playlist_rename">Rename</string>
	<string name="screen_audio_playlist_rename_name">New name:</string>
	<string name="screen_audio_playlist_rename_ok">OK</string>
	<string name="screen_audio_playlist_rename_cancel">Cancel</string>
	<string name="screen_audio_playlist_rename_title">Rename</string>
	<string name="screen_audio_songs_add_songs">Add Songs</string>
	<string name="screen_audio_playlist_edit_ok">Add</string>
	<string name="screen_audio_playlist_edit_selectall">All</string>
	<string name="screen_audio_playlist_edit_cancelall">None</string>
	<string formatted="false" name="screen_search_page_default">0/0 page</string>
	<string formatted="false" name="screen_search_page_info">%s/%s page</string>
	<string name="screen_home_menu_scanner">Scan</string>
	<string name="screen_home_menu_search">Search lyrics</string>
	<string name="screen_home_menu_edit">lyrics edit</string>
	<string name="screen_home_menu_color">Lyrics colors</string>
	<string name="screen_home_menu_delete">Delete the word graph</string>
	<string name="screen_home_menu_modify">Lyrics to modify</string>
	<string name="screen_home_menu_lyric_tools">lyric modify</string>
	<string name="screen_home_menu_download_manager">Download</string>
	<string name="screen_home_menu_system_settings">settings</string>
	<string name="screen_home_menu_equalizer_settings">Equalizer</string>
	<string name="screen_home_menu_share">Share</string>
	<string name="screen_home_menu_song_problem">Song Error</string>
	<string name="screen_home_menu_skin">Replacement of skin</string>
	<string name="screen_home_menu_exit">Exit</string>
	<string name="screen_home_menu_timing">Timer</string>
	<string name="screen_home_menu_mode">Play mode</string>
	<string name="screen_home_menu_version">Version</string>
	<string name="screen_home_menu_suggestion">Feedback</string>
	<string name="screen_home_menu_function">Help</string>
	<string name="screen_audio_playlist_menu_delete">Remove</string>
	<string name="screen_search_download_from_baidu">Baidu Music</string>
	<string name="screen_search_download_from_sougou">Sogou Music</string>
	<string name="screen_audio_songs_addsongs">Add Songs</string>
	<string formatted="false" name="screen_search_singers_count">%s Artists</string>
	<string formatted="false" name="screen_search_songs_count">%s Songs</string>
	<string formatted="false" name="screen_search_reserve_songs_count">%s Songs</string>
	<string formatted="false" name="screen_search_history_songs_count">%s Songs</string>
    <string formatted="false" name="screen_audio_songs_count">%s</string>
    <string formatted="false" name="screen_audio_next_song">Next:%s</string>
	<string name="screen_search_download_ok">Download</string>
	<string name="screen_search_download_cancel">Cancel</string>
	<string name="get_network_failed">Please check if your network is available</string>
	<string name="screen_search_previous">Previous page</string>
	<string name="screen_search_next">Next page</string>
	<string name="screen_audio_song_options_addto">Add to playlist</string>
	<string name="screen_audio_song_options_ringtones">Set for ring</string>
	<string name="screen_audio_song_options_attributes">Check Music Info</string>
	<string name="screen_audio_make_lyric">Make lyrics</string>
	<string name="screen_audio_song_options_delete">Delete</string>
    <string name="dialog_hide_or_exit_title">Sure to exit?</string>
    <string name="dialog_hide_or_exit_ok">OK</string>
    <string name="dialog_hide_or_exit_hide">Hide</string>
    <string name="dialog_hide_or_exit_cancel">Cancel</string>
      <string name="screen_help_title">aMusic&#160;v</string>
      <string name="screen_help_tv"> enjoy music, enjoy yourself !</string>
      <string name="screen_help_tv0">User guide</string>
      <string name="screen_help_tv1"><u>1.Music</u></string>
      <string name="screen_help_tv2"><u>2.Sing</u></string>
      <string name="screen_help_tv3"><u>3.Record</u></string>
      <string name="screen_help_tv4"><u>4.Library</u></string>
      <string name="screen_help_tv5"><u>5.Menu</u></string>
      <string name="screen_help_tv6">Copyright</string>
      <string name="screen_help_copyright">\t aMusic attaches great importance to the protection of intellectual property in the transmission of network, it obeys various of intellectual property laws,regulations and actively cooperate to curb piracy.\n\taMusic provides the services of online search and link, whose content is from the Internet,aMusic does not store any resources itself and will not edit or modify the content of the link as well.The result produced by the use of the service is obtained by the keyword input and in the way of non-manual.We do not guarantee the validity,the legality and the timeliness of such third party web pages, as well we do not mean we and our users have obatained the property of third-party website links.\n\tAny behavior of using aMusic must obey the following rules：\n\t1.any search and playback of music,images,text and other content must be in the purpose of proper use.\n\t2.any search and playback of the music,pictures and other materials should not be in commercial purpose.\n\tAccording to Chinese relevant laws, regulations and normative requirements,the developers of aMusic make the  measures and steps aiming at protecting the intellectual property rights of  the right people.Once you find the search and link content by aMusic violate your rights,you should tell the AM official first and then AM offical will remove the relevant contents and disconnect the links according to Chinese laws and regulations and normative documents to the government.\n\n\tMeasures and steps in details are as follows: \n\trights to notice\n\tIf any individual or entity meets the following two conditions:\n\t1.the legitimate rights is violated by the third-party sites；\n\t2.the content of the website visit in automatic retrieval method through aMusic violates the legitimate rights of the relevant people\n\tSuch individual or entity can commit the right notice to AM official in written way(by fax or mail).Right holders should sign on the paper,if the right holder is a certain organizition or institution,please affix the official seal.\n\tIn accordance with relevant laws,rights notice must contain the following information:\n\t1.the identification of rights holders,which should include at least the identity card or passport(natural persons) or organization legally registered certificate(for enterprises and other organizations).Specific contact information for rights holders,should at least include the name,mailing address,telephone number,fax and e-mail.\n\t2.if the rights holder want to commit on behalf of exercise of their right,the principals should show the material which should include the material mentioned above and rights holders\' power of attorney as well.\n\t3.copyright or other intellectual property ownership certificate.\n\t4.the proof of the infringement,include the description of the violation of intellectual property rights,the page information of infringement and third-party page URL list.\n\t5.The submitter will promise if the representation of notice is not real,the submitter will take the responsibility according to laws,which include but not limit to the compensition for the necessary expenses and attorneys\' fees.\n\tAfter receiving and verifying the material mentioned above,AM official will take some measures,of which removing the content is included,to protect the right of the right holders according to the chinese laws and relavent requirements.</string>
		<string name="lyric_and_pictrue_setting">Picture and lyrics download Settings</string>
		<string name="pictrue_download_setting">Picture download</string>
		<string name="lyric_download_setting">Lyrics download</string>
		<string name="lashing_controll_title">Swinging the song</string>
		<string name="lashing_controll_summary">Swinging the phone around to switch song</string>
		<string name="desktop_lyric_setting">Desktop lyrics display</string>
		<string name="special_lashing_controll_title">The song about swinging</string>
		<string name="special_lashing_controll_summary">Left under on a song, right dumped a song</string>
		<string name="sensitivity_lashing_controll_title">Swinging sensitivity</string>
		<string name="sensitivity_lashing_controll_summary">Adjust the sensitivity of the rejection songs</string>
		<string name="desktop_lyric_font_color_setting">Memory desktop font and color of the lyrics</string>
		<string name="skin_fontColor_title">The font color sets</string>
		<string name="skin_fontColor_summary">Highlight the font and normal font color settings</string>
		<string name="accompany_download_title">Accompaniment</string>
		<string name="accompany_download_summary">Automatic download accompaniment</string>
		<string name="start_record_title">Save the recording</string>
		<string name="start_record_summary">Automatically Save the recording</string>
		<string name="sound_sync_title">The human voice sync output</string>
		<string name="sound_sync_summary">Playback singer voice when the sound output</string>
		<string name="sound_gain_control_title">Sound Gain adjustment</string>
		<string name="sound_gain_control_summary">Sound expansion of multiples of the regulation</string>
		<string name="other_setting">Other settings</string>
		<string name="auto_update_title">Automatic Updates</string>
		<string name="auto_update_summary">Start automatically check for updates</string>
		<string name="general_setting">General Settings</string>
		<string name="advanced_setting">Advanced_Settings</string>
		<string name="music_pause_controll_title">Unplug the headphones suspended</string>
		<string name="music_pause_controll_summary">Unplug the headphones, the music is playing pause</string>
		<string name="delete_propt">Prompt</string>
</resources>